<resources>
    <string name="app_name">Main</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="not_signed_in">Not Currently Signed in</string>
    <string name="continueButton">Continue</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="updateName">Update Name</string>
    <string name="tempName">Name</string>
    <string name="changeDescription">Change Description</string>
    <string name="descriptionHint">Update description</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">loading...</string>
    <string name="nav_header_subtitle">Paragon</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Profile</string>
    <string name="menu_gallery">Community</string>
    <string name="menu_slideshow">Upload</string>
    <string name="title_activity_community">CommunityActivity</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
</resources>
